--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>チャット</h1>
+  <h1>チャット2021</h1>
     <ul id="chats">
     </ul>
     <form id="form">
